/*
 * Copyright (C) 2019 The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package android.stats.intelligence;
option java_outer_classname = "IntelligenceStatsEnums";

enum Status {
  // The value wasn't set.
  // protoc requires enum values to be unique by package rather than enum type.
  // This forces us to prefix the enum values.
  STATUS_UNKNOWN = 0;
  // The event succeeded.
  STATUS_SUCCEEDED = 1;
  // The event had an error.
  STATUS_FAILED = 2;
}

enum EventType {
  // The value wasn't set.
  EVENT_UNKNOWN = 0;
  // ContentSuggestionsService classifyContentSelections call.
  EVENT_CONTENT_SUGGESTIONS_CLASSIFY_CONTENT_CALL = 1;
  // ContentSuggestionsService suggestContentSelections call.
  EVENT_CONTENT_SUGGESTIONS_SUGGEST_CONTENT_CALL = 2;
}
